text、input、image组件

--- a/app.json
+++ b/app.json
@@ -1,6 +1,10 @@
 {
   "pages": [
+    "pages/input/input",
+    "pages/image/image",
+    "pages/text/text",
     "pages/home/home",
     "pages/about/about"
-  ]
+  ],
+  "sitemapLocation": "sitemap81.json"
 }
